--- a/0x00-Webpack/task_2/css/main.css
+++ b/0x00-Webpack/task_2/css/main.css
@@ -1,16 +1,19 @@
+/* Style for the logo element */
 #logo {
     width: 200px;
     height: 200px;
-    background-image: url('../assets/holberton-logo.jpg');
-    background-size: 200px 200px;
-    background-repeat: no-repeat;
+    background-image: url('../assets/holberton-logo.jpg'); /* Path to your logo image */
+    background-size: cover; /* Cover the entire div */
+    background-repeat: no-repeat; /* Prevent repeating the image */
 }
 
+/* Button styles (optional) */
 button {
-    margin-bottom: 10px;
+    margin-bottom: 10px; /* Space below the button */
 }
 
-div {
-    font-weight: bold;
-    text-align: right;
+/* Style for the counter text */
+.counter {
+    font-weight: bold; /* Make the counter text bold */
+    text-align: right; /* Align text to the right */
 }
