--- a/0x00-Webpack/task_2/css/main.css
+++ b/0x00-Webpack/task_2/css/main.css
@@ -16,5 +16,5 @@ button {
 /* Style for the counter text */
 .counter {
     font-weight: bold; /* Make the counter text bold */
-    text-align: right; /* Align text to the right */
+    /*text-align: right;  Align text to the right */
 }
