--- a/0x00-Webpack/task_2/css/main.css
+++ b/0x00-Webpack/task_2/css/main.css
@@ -10,7 +10,7 @@
 /* Button styles (optional) */
 /*
 button {
-    margin-bottom: 10px; /* Space below the button */
+    margin-bottom: 10px;  Space below the button 
 
 */
 /* Style for the counter text */
